# AITerminalTool-1

./: README.md  config.json  main.py  pyproject.toml
aiterminal/: __init__.py  ai_services.py  cli.py  config.py  internet.py  network.py  system.py  utils.py
templates/: index.html
