[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.76.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.15.2",
]
